--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,10 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{userEmail}}</ion-title>
-
+    <ion-title>Your Order is being Prepared Order Id:{{ oid }}</ion-title>
   </ion-toolbar>
 </ion-header>
-
-
-
-
+<div>
+  <h1>Countdown timer</h1>
+  <h2>{{ countDown | async | formatTime }}</h2>
+</div>
