--- a/src/app/foodmenu/foodmenu.page.scss
+++ b/src/app/foodmenu/foodmenu.page.scss
@@ -19,3 +19,18 @@ ion-header {
     }
 
 }
+
+.menuList{
+    ion-title{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-style: italic;
+        text-align: center;
+        font-weight: bold;
+        color: crimson;
+        font-size: 20px;
+        background-color: burlywood;
+        border: 1px solid;
+    }
+
+    
+}
