--- a/src/app/rest-reviews-and-ratings/rest-reviews-and-ratings.page.html
+++ b/src/app/rest-reviews-and-ratings/rest-reviews-and-ratings.page.html
@@ -12,11 +12,12 @@
         <ion-item >
         <ion-label color="primary" stacked><ion-icon name="contact"></ion-icon>
           {{userName}}</ion-label>
+          <ion-icon name="star" color="warning"></ion-icon>
           <ion-icon name="arrow-down" color="danger" (click)="rateDown()"></ion-icon>
          
           <h1>{{inputRating}}/5</h1>
-         
         <ion-icon name="arrow-up" color="success" (click)="rateUp()"></ion-icon>
+        
         </ion-item>
         
         <ion-textarea type="text" placeholder="Type your review here" [(ngModel)]="newReviewData.restReview"></ion-textarea>
@@ -36,7 +37,11 @@
           <p>"{{reviewInfo.RReview}}"</p>
         </ion-label>
        
-        <span slot="end"> {{reviewInfo.RRating}}/5 &nbsp;     
+        <span slot="end">
+            <ion-icon name="star" color="warning"></ion-icon>
+             {{reviewInfo.RRating}}/5 
+             
+             &nbsp;     
         </span>
 
       </ion-item>
