--- a/src/app/foodmenu/foodmenu.page.scss
+++ b/src/app/foodmenu/foodmenu.page.scss
@@ -26,9 +26,9 @@ ion-header {
         font-style: italic;
         text-align: center;
         font-weight: bold;
-        color: crimson;
+        color: blue;
         font-size: 20px;
-        background-color: burlywood;
+        background-color: gray;
         border: 1px solid;
     }
 
