--- a/src/app/rest-reviews-and-ratings/rest-reviews-and-ratings.page.scss
+++ b/src/app/rest-reviews-and-ratings/rest-reviews-and-ratings.page.scss
@@ -6,7 +6,8 @@ ion-header {
         text-align: center;
         font-style: italic;
         font-weight: bold;
-        background-image: linear-gradient(to right,red, yellow);
+        //background-image: linear-gradient(to right,red, yellow);
+        background-color: lightgray;
     
     }
 }
