--- a/src/app/foodmenu/foodmenu.page.html
+++ b/src/app/foodmenu/foodmenu.page.html
@@ -87,8 +87,13 @@
 
 
 <ion-content>
-  <div class="menuList" *ngFor="let type of itemTypes; let j = index">
 
+    <ion-item>
+        <ion-label color="success">Only Veg</ion-label>
+        <ion-toggle [(ngModel)]="veg" color="success" slot="start"></ion-toggle>
+    </ion-item>
+
+  <div class="menuList" *ngFor="let type of itemTypes; let j = index">
     <ion-title padding>
       <ion-icon name="return-right"></ion-icon>
       {{type}}
@@ -98,23 +103,51 @@
       </ion-icon>
     </ion-title>
 
-    <ion-list *ngFor="let eachRest of food_data; let i = index" no-padding>
-      <ion-item *ngIf="eachRest.Type == type && arrowClicked[j]">
-        <img src="data:image/jpeg;base64,{{ eachRest.Fimage }}" style="height: 50px; width: 80px" />
-        <ion-label padding>
-          <h2 text-wrap>{{ eachRest.Name }}</h2>
-          <p>
-            {{eachRest.Ingredients}}
-          </p>
-        </ion-label>
-        <ion-icon name="remove" color="danger" (click)="removeItem(eachRest.ItemID)"></ion-icon>
-        &nbsp;
-        {{ displayQty(eachRest.ItemID) }}
-        &nbsp;
-        <ion-icon name="add" color="success" (click)="addItem(eachRest.ItemID)"></ion-icon>
-        <span slot="end">&#8377; {{ eachRest.Rate }}/- &nbsp; </span>
-      </ion-item>
-    </ion-list>
+    <div *ngIf="!veg">
+      <ion-list *ngFor="let eachRest of food_data; let i = index" no-padding>
+        <ion-item *ngIf="eachRest.Type == type && arrowClicked[j]">
+          <img src="../../assets/icon/veg_icon.png" *ngIf="!eachRest.nonVeg"  style="height:15px; width:15px; margin-bottom: 40px;" no-padding>
+          <img src="../../assets/icon/non-veg_icon.png" *ngIf="eachRest.nonVeg"  style="height:15px; width:15px; margin-bottom: 40px;" no-padding>
+          <img src="data:image/jpeg;base64,{{ eachRest.Fimage }}" style="height: 50px; width: 80px" />
+          <ion-label padding (click)="itemDetails(i)">
+            <h2 text-wrap>{{ eachRest.Name }}</h2>
+            <p>
+              {{eachRest.Ingredients}}
+              
+            </p>
+          </ion-label>
+          <ion-icon name="remove" color="danger" (click)="removeItem(eachRest.ItemID)"></ion-icon>
+          &nbsp;
+          {{ displayQty(eachRest.ItemID) }}
+          &nbsp;
+          <ion-icon name="add" color="success" (click)="addItem(eachRest.ItemID)"></ion-icon>
+          <span slot="end">&#8377; {{ eachRest.Rate }}/- &nbsp; </span>
+        </ion-item>
+      </ion-list>
+    </div>
+
+    <div *ngIf="veg">
+        <ion-list *ngFor="let eachRest of food_data; let i = index" no-padding>
+          <ion-item *ngIf="eachRest.Type == type && arrowClicked[j] && !eachRest.nonVeg">
+            <img src="../../assets/icon/veg_icon.png" *ngIf="!eachRest.nonVeg"  style="height:15px; width:15px; margin-bottom: 40px;" no-padding>
+            <img src="../../assets/icon/non-veg_icon.png" *ngIf="eachRest.nonVeg"  style="height:15px; width:15px; margin-bottom: 40px;" no-padding>
+            <img src="data:image/jpeg;base64,{{ eachRest.Fimage }}" style="height: 50px; width: 80px" />
+            <ion-label padding (click)="itemDetails(i)">
+              <h2 text-wrap>{{ eachRest.Name }}</h2>
+              <p>
+                {{eachRest.Ingredients}}
+                
+              </p>
+            </ion-label>
+            <ion-icon name="remove" color="danger" (click)="removeItem(eachRest.ItemID)"></ion-icon>
+            &nbsp;
+            {{ displayQty(eachRest.ItemID) }}
+            &nbsp;
+            <ion-icon name="add" color="success" (click)="addItem(eachRest.ItemID)"></ion-icon>
+            <span slot="end">&#8377; {{ eachRest.Rate }}/- &nbsp; </span>
+          </ion-item>
+        </ion-list>
+      </div>
 
   </div>
 
