--- a/src/app/foodmenu/foodmenu.page.scss
+++ b/src/app/foodmenu/foodmenu.page.scss
@@ -26,10 +26,11 @@ ion-header {
         font-style: italic;
         text-align: center;
         font-weight: bold;
-        color: blue;
-        font-size: 20px;
-        background-color: gray;
-        border: 1px solid;
+        color: black;
+        font-size: 18px;
+        //background-color: lightgray;
+        border: 1.5px solid ;
+        border-radius: 10px;
     }
 
     
