--- a/src/app/restaurant-expand/restaurant-expand.page.scss
+++ b/src/app/restaurant-expand/restaurant-expand.page.scss
@@ -34,12 +34,20 @@ ion-header {
     }
 }
 
-.ratingBar {
-    font-family: fantasy;
-    //background-image: linear-gradient(to right,red, yellow);
-    width: 100%;
-    padding: 2px;
-    background-color: lightgrey;
-    //text-decoration: underline;
+.ratingBar{
+    
+    ion-item{
+        background-color: lightgrey;
+    }
+
+    span{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        
+    }
+    ion-label{
+        font-style: italic;
+        background-color: lightgrey;
+    }
 }
 
