--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -1,27 +1,18 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      List
-    </ion-title>
-  </ion-toolbar>
+  Order ID: {{passed_id}}
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
-    </ion-item>
-  </ion-list>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
-    </div>
-  -->
+  <ion-card *ngFor="let eachOrder of allOrder">
+    <ion-card-header>
+      <ion-card-title>{{eachOrder.Name}} </ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Quantity:
+      {{eachOrder.qty}}
+      Price:
+      {{eachOrder.price}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
