--- a/src/app/foodmenu/foodmenu.page.html
+++ b/src/app/foodmenu/foodmenu.page.html
@@ -6,6 +6,20 @@
     <ion-title *ngIf="food_data" padding>
       Total Cost - &#8377;{{ total }}
     </ion-title>
+    <ion-item >
+      <ion-button >
+        Set Budget
+      </ion-button>
+      &#8377;&nbsp;
+      <ion-input type="number" max-length="4" wrap="soft" [(ngModel)]="userBudget" style="border:solid 1px black; border-radius: 10px; ">
+      </ion-input>
+      <ion-label color="danger" *ngIf="total > userBudget" slot="end" style="margin-left:40px">
+        Budget Exceeded!
+      </ion-label>
+      <ion-label color="success" slot="end" *ngIf="total <= userBudget" style="margin-left:100px">
+        In Budget!
+      </ion-label>
+    </ion-item>
   </ion-toolbar>
 </ion-header>
 <!--
@@ -89,16 +103,10 @@
 <ion-content>
 
     <ion-item>
-        <ion-label color="success">Only Veg</ion-label>
         <ion-toggle [(ngModel)]="veg" color="success" slot="start"></ion-toggle>
-        <span slot="end">
-          <ion-button shape="round" color="primary">
-            Set Budget: 
-        </ion-button>  
-        <ion-input style="width: 20px"></ion-input>
-        </span>
+        <ion-label color="success">Veg</ion-label>
     </ion-item>
-
+    
   <div class="menuList" *ngFor="let type of itemTypes; let j = index">
     <ion-title padding>
       <ion-icon name="return-right"></ion-icon>
