--- a/src/app/cart-page/cart-page.page.html
+++ b/src/app/cart-page/cart-page.page.html
@@ -36,7 +36,7 @@
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="order()">
-      <ion-icon name="cart"></ion-icon>
+     PLACE ORDER
     </ion-fab-button>
   </ion-fab>
 
