--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
                   <h5> <ion-icon name="star"></ion-icon>{{eachRest.RRating}}/5   </h5>
                 </ion-text> </ion-card-title>
          
-          <ion-img src="data:image/jpeg;base64,{{eachRest.RImg}}"></ion-img>
+          <ion-img src="../../{{eachRest.RImgAddress}}"></ion-img>
       </ion-card>
     </ion-col>
   </div>
