--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Payment</ion-title>
+    <ion-title padding>Payment</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -9,47 +9,94 @@
     <ion-row>
       <ion-col>
         <div>
-          Item
+          <h2>
+            Item
+          </h2>
         </div>
       </ion-col>
       <ion-col>
         <div>
-          Quantity
+          <h2>
+            Quantity
+          </h2>
         </div>
       </ion-col>
       <ion-col>
         <div>
-          Price
+          <h2>
+           Price
+          </h2>
         </div>
       </ion-col>
     </ion-row>
     <ion-row *ngFor="let eachOrder of currentOrder">
       <ion-col>
         <div>
+          <h3>
           {{ eachOrder.Name}}
+          </h3>
         </div>
       </ion-col>
       <ion-col>
         <div>
+          <h3>
           {{eachOrder.qty}}
+          </h3>
         </div>
       </ion-col>
       <ion-col>
         <div>
+          <h3>
           {{eachOrder.price}}
+          </h3>
         </div>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <h2>
-    Total : {{total}}
-  </h2>
-  <h1>
-    Pay By Cash
-  </h1>
-  <h1>
-    Pay Using UPI
-  </h1>
-  <h1>Pay Using Wallet</h1>
+  <ion-item>
+    <h1>
+      Total : {{total}}
+    </h1>
+  </ion-item>
+
+
 
 </ion-content>
+
+<ion-footer>
+    <ion-label color="primary" >
+      <h1 padding>
+        Payment methods
+        <ion-icon name="bookmark"></ion-icon>
+      </h1>
+    </ion-label>
+    
+      <ion-grid>
+          <ion-row>
+            <ion-col col-6>
+              <ion-button expand="full" color="tertiary" shape="round">
+                  <ion-icon slot="start" name="card"></ion-icon>
+                  Card payment
+                
+              </ion-button>
+            </ion-col>
+            <ion-col col-6>
+                <ion-button expand="full" color="tertiary" shape="round">
+                    <ion-icon slot="start" name="navigate"></ion-icon>
+                    UPI
+                  
+                </ion-button>
+            </ion-col>
+          </ion-row>
+      </ion-grid>
+    
+      <ion-button expand="full" shape="round" color="warning" (click)="walletPayemnt()">
+          <ion-icon slot="start" name="wallet"></ion-icon>
+          Use App Wallet
+      </ion-button>
+      <ion-button expand="full" shape="round" color="success">
+          <ion-icon slot="start" name="cash"></ion-icon>
+          Cash Payment
+      </ion-button>
+
+</ion-footer>
