--- a/src/app/orders/orders.page.html
+++ b/src/app/orders/orders.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Your Past Orders</ion-title>
+    <ion-title padding>Your Past Orders</ion-title>
   </ion-toolbar>
 </ion-header>
 
