--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,9 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Your Order is being Prepared Order Id:{{ oid }}</ion-title>
+    <ion-title padding>Profile</ion-title>
   </ion-toolbar>
 </ion-header>
-<div>
-  <h1>Countdown timer</h1>
-  <h2>{{ countDown | async | formatTime }}</h2>
-</div>
+
+<ion-content>
+
+  <ion-item>
+    <ion-avatar>
+        <img src="../../assets/user/default.png">
+    </ion-avatar>
+  </ion-item>
+
+</ion-content>
