--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -1,5 +1,13 @@
-ion-title
-{
-    font-size: 30px;
-    font-weight: bold;
+ion-header {
+    
+
+    ion-title{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+        font-style: italic;
+        font-weight: bold;
+        //background-image: linear-gradient(to right,red, yellow);
+        background-color: lightgray;
+    
+    }
 }
