--- a/src/app/orders/orders.page.html
+++ b/src/app/orders/orders.page.html
@@ -5,16 +5,17 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card *ngFor="let eachOrder of allOrder" (click)="onClickOrder(eachOrder)">
+  <ion-card *ngFor="let eachOrder of unique_Order" (click)="onClickOrder(eachOrder)">
     <ion-card-header>
-      <ion-card-subtitle></ion-card-subtitle>
-      <ion-card-title>Order ID:{{eachOrder.OId}} </ion-card-title>
+      <ion-card-subtitle>Order ID:{{eachOrder.id}}</ion-card-subtitle>
+      <ion-card-title>Restaurant Name:{{eachOrder.name}}</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      <strong>
-        Bill:{{eachOrder.bill}}
-      </strong>
+      Bill:{{eachOrder.bill}}<br />
+      Date:{{eachOrder.date}}
+
+
     </ion-card-content>
   </ion-card>
 
