--- a/src/app/editinfo/editinfo.page.html
+++ b/src/app/editinfo/editinfo.page.html
@@ -7,6 +7,19 @@
 </ion-header>
 
 <ion-content >
+    <ion-card-content>
+        <ion-item>
+            <img src="../../assets/icon/profile.png" style="height:100px; width:100px; margin-bottom: 40px;" no-padding>  
+          </ion-item>
+          
+        <ion-item style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold" >
+           NAME: &nbsp; {{userName}}
+          </ion-item>
+          <ion-item style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold"  >
+             EMAIL: &nbsp; {{userEmail}}
+            </ion-item>
+           
+      </ion-card-content>
   <ion-card >
     <ion-card-content>
       <ion-list>
