--- a/src/app/cart-page/cart-page.page.html
+++ b/src/app/cart-page/cart-page.page.html
@@ -43,7 +43,7 @@
     <ion-card (click)="onClick()">
       <ion-card-header>
         <ion-card-subtitle></ion-card-subtitle>
-        <ion-card-title>Proceed to Payment</ion-card-title>
+        <ion-card-title color="primary">Proceed to Payment</ion-card-title>
       </ion-card-header>
 
       <ion-card-content>
