--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -90,7 +90,7 @@
           </ion-row>
       </ion-grid>
     
-      <ion-button expand="full" shape="round" color="warning" (click)="walletPayemnt()">
+      <ion-button expand="full" shape="round" color="warning" (click)="walletPayment()">
           <ion-icon slot="start" name="wallet"></ion-icon>
           Use App Wallet
       </ion-button>
