--- a/src/app/exit-page/exit-page.page.scss
+++ b/src/app/exit-page/exit-page.page.scss
@@ -6,10 +6,9 @@ ion-header {
         text-align: center;
         font-style: italic;
         font-weight: bold;
-        //background-image: linear-gradient(to right,red, yellow);
-        background-color: lightgray;
-    
+        background-color: lightgrey;
     }
+
 }
 
 .avatars{
