--- a/src/app/cart-page/cart-page.page.html
+++ b/src/app/cart-page/cart-page.page.html
@@ -26,6 +26,14 @@
     </div>
   </ion-list>
 
+  <ion-item *ngIf="enableNote">
+    <ion-input type="text" placeholder="Note to chef" [(ngModel)]="noteToChef"></ion-input>
+    <ion-button shape="round" (click)="confirm()" color="success">
+      Send Note to chef
+    </ion-button>
+  </ion-item>
+  
+
   <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="order()">
      PLACE ORDER
@@ -53,6 +61,9 @@
       </ion-card-content>
     </ion-card>
   </div>
+
+  
+
 </ion-content>
 
 
