--- a/src/app/orders/orders.page.html
+++ b/src/app/orders/orders.page.html
@@ -12,7 +12,7 @@
     </ion-card-header>
 
     <ion-card-content>
-      Bill:{{eachOrder.bill}}<br />
+      <!-- Bill:{{eachOrder.bill}}<br /> -->
       Date:{{eachOrder.date}}
 
 
