--- a/src/app/registration-page1/registration-page1.page.html
+++ b/src/app/registration-page1/registration-page1.page.html
@@ -4,37 +4,37 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-<ion-card >
-  <ion-card-content>
-    <ion-list>
-      <ion-item>
-        <ion-input placeholder="Name" [(ngModel)]="registerdata.name"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input placeholder="Email" [(ngModel)]="otpdata.email"></ion-input>
-        <ion-button expand="block" (click)="getOtp()" shape="round">Get Otp</ion-button>
-      </ion-item>
-      <p *ngIf="showMyMessage">otp has been sent.</p>
-      <ion-item>
-        <ion-input placeholder="Re-enter Email" [(ngModel)]="registerdata.email"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input placeholder="Password" type="password" [(ngModel)]="registerdata.password"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input placeholder="Mobile No." type="tel" [(ngModel)]="registerdata.phone"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MM DD YYYY" placeholder="Select Date" [(ngModel)]="registerdata.dob">
-        </ion-datetime>
-      </ion-item>
-      <ion-item>
-        <ion-input placeholder="Enter OTP" placeholder="otp" [(ngModel)]="registerdata.otp"></ion-input>
-      </ion-item>
-      <ion-button expand="block" (click)="Register()" shape="round">Register</ion-button>
-    </ion-list>
-  </ion-card-content>
-</ion-card>
+<ion-content>
+  <ion-card>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-input placeholder="Name" [(ngModel)]="registerdata.name"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input placeholder="Email" [(ngModel)]="otpdata.email"></ion-input>
+          <ion-button expand="block" (click)="getOtp()" shape="round">Get Otp</ion-button>
+        </ion-item>
+        <p *ngIf="showMyMessage">otp has been sent.</p>
+        <ion-item>
+          <ion-input placeholder="Re-enter Email" [(ngModel)]="registerdata.email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input placeholder="Password" type="password" [(ngModel)]="registerdata.password"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input placeholder="Mobile No." type="tel" [(ngModel)]="registerdata.phone"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Birth-Date</ion-label>
+          <ion-datetime displayFormat="MM DD YYYY" placeholder="Select Date" [(ngModel)]="registerdata.dob">
+          </ion-datetime>
+        </ion-item>
+        <ion-item>
+          <ion-input placeholder="Enter OTP" placeholder="otp" [(ngModel)]="registerdata.otp"></ion-input>
+        </ion-item>
+        <ion-button expand="block" (click)="Register()" shape="round">Register</ion-button>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
