--- a/src/app/editinfo/editinfo.page.html
+++ b/src/app/editinfo/editinfo.page.html
@@ -12,10 +12,10 @@
             <img src="../../assets/icon/profile.png" style="height:100px; width:100px; margin-bottom: 40px;" no-padding>  
           </ion-item>
           
-        <ion-item style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold" >
+        <ion-item color="success" style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold" >
            NAME: &nbsp; {{userName}}
           </ion-item>
-          <ion-item style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold"  >
+          <ion-item color="primary" style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold"  >
              EMAIL: &nbsp; {{userEmail}}
             </ion-item>
            
@@ -24,7 +24,9 @@
     <ion-card-content>
       <ion-list>
         <ion-item>
-          <ion-input placeholder="Enter Email" [(ngModel)]="registerdata.email"></ion-input>
+          <ion-label padding color="primarys">
+            Reset Password
+          </ion-label>
         </ion-item>
         <ion-item>
           <ion-input placeholder="Enter Old Password" type="password" [(ngModel)]="registerdata.opassword"></ion-input>
