--- a/src/app/editinfo/editinfo.page.scss
+++ b/src/app/editinfo/editinfo.page.scss
@@ -1,3 +1,16 @@
+ion-header {
+    
+
+  ion-title{
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      text-align: center;
+      font-style: italic;
+      font-weight: bold;
+      background-color: lightgrey;
+  }
+
+}
+
 ion-img {
     max-height: 35vh;
     overflow: hidden;
@@ -12,43 +25,6 @@ ion-img {
     font-weight: bold;
   }
   
-  .classSetBackground {
-    background: url("/assets/background1.jpg");
-  }
-  
-  // .horizontalCards {
-  //   overflow-x: scroll;
-  //   overflow-y: hidden;
-  // }
-  
-  ion-card-title {
-    font-family: fantasy;
-    font-size: 30px;
-    text-align: center;
-    text-decoration-style: solid;
-    background-color: coral;
-    
-  }
-
- 
-  
-  .fixed[scrollx=true]{
-    display: flex;
-    flex-wrap: nowrap;
-    position: relative;
-    overflow-x: auto;
-    ::-webkit-scrollbar {
-      display: none;
-    }
-  }
-  
-  .fixed[scrollx=true] {
-    overflow-x: auto;
-  }
-  
-  // .fixed[scrolly=true] {
-  //   overflow-x: auto;
-  // }
   
   
   
