that should be it

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -1,55 +1,56 @@
-<ion-header>
+<ion-header padding style="text-align: center">
   Order ID: {{passed_id}}
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <div>
-          Item
-        </div>
-      </ion-col>
-      <ion-col>
-        <div>
-          Quantity
-        </div>
-      </ion-col>
-      <ion-col>
-        <div>
-          Price
-        </div>
-      </ion-col>
-      <ion-col>
-        <div>
-          Total
-        </div>
-      </ion-col>
-    </ion-row>
-    <ion-row *ngFor="let eachOrder of unique_Order">
-      <ion-col>
-        <div>
-          {{ eachOrder.name}}
-        </div>
-      </ion-col>
-      <ion-col>
-        <div>
-          {{eachOrder.qty}}
-        </div>
-      </ion-col>
-      <ion-col>
-        <div>
-          {{eachOrder.price}}
-        </div>
-      </ion-col>
-      <ion-col>
-        <div>
-          {{eachOrder.total}}
-        </div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <strong>Total Bill:{{bill}}</strong>
-
+  <ion-card padding style="margin-top: 50px;">
+    <ion-grid>
+      <ion-row padding>
+        <ion-col>
+          <div style="font-weight: bold">
+            Item
+          </div>
+        </ion-col>
+        <ion-col>
+          <div style="font-weight: bold">
+            Quantity
+          </div>
+        </ion-col>
+        <ion-col>
+          <div style="font-weight: bold">
+            Price
+          </div>
+        </ion-col>
+        <ion-col>
+          <div style="font-weight: bold">
+            Total
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngFor="let eachOrder of unique_Order" padding>
+        <ion-col>
+          <div>
+            {{ eachOrder.name}}
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+            {{eachOrder.qty}}
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+            {{eachOrder.price}}
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+            {{eachOrder.total}}
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+      <strong padding>Total Bill Amount:{{bill}}</strong>
+    </ion-card>
 
 </ion-content>
