--- a/src/app/editinfo/editinfo.page.html
+++ b/src/app/editinfo/editinfo.page.html
@@ -1,30 +1,48 @@
 <ion-header>
-  <ion-card>
-  <ion-toolbar>
-    <ion-card-title>PROFILE</ion-card-title>
-  </ion-toolbar>
-</ion-card>
-</ion-header>
+    <ion-toolbar>
+      <ion-title padding>Profile</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content >
     <ion-card-content>
-        <ion-item>
-            <img src="../../assets/icon/profile.png" style="height:100px; width:100px; margin-bottom: 40px;" no-padding>  
+        <ion-item padding>
+            <ion-avatar class="avatars" >
+              <img src="../../assets/user/default.png">
+            </ion-avatar>
           </ion-item>
           
-        <ion-item color="success" style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold" >
-           NAME: &nbsp; {{userName}}
-          </ion-item>
-          <ion-item color="primary" style="font-family: Georgia, 'Times New Roman', Times, serif; font-weight: bold"  >
-             EMAIL: &nbsp; {{userEmail}}
-            </ion-item>
+        <ion-item >
+          Name: &nbsp; 
+          <ion-label color="success">
+           {{userName}}
+          </ion-label>
+        </ion-item>
+        <ion-item >
+          Email: &nbsp; 
+          <ion-label color="tertiary">
+             {{userEmail}}
+          </ion-label>
+        </ion-item>
+        <ion-item >
+          Date of Birth: &nbsp;  
+          <ion-label color="tertiary">
+              {{userDob}}
+           </ion-label>
+        </ion-item>
+        <ion-item>
+          Phone: &nbsp;
+           <ion-label color="tertiary">
+              {{userPhone}}
+           </ion-label>
+        </ion-item>
            
       </ion-card-content>
   <ion-card >
     <ion-card-content>
       <ion-list>
         <ion-item>
-          <ion-label padding color="primarys">
+          <ion-label color="primary" style="text-align: center">
             Reset Password
           </ion-label>
         </ion-item>
