--- a/src/app/editinfo/editinfo.page.scss
+++ b/src/app/editinfo/editinfo.page.scss
@@ -11,20 +11,13 @@ ion-header {
 
 }
 
-ion-img {
-    max-height: 35vh;
-    overflow: hidden;
-  }
   
-  ion-card {
-    background-color: rgb(236, 228, 228);
-    width:96%;
-  //  height: 10%;
-
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
+  .avatars{
+    margin:0 auto;
+    align-self: center;
+    width: 100px;
+    height: 100px;
+}
   
   
   
